<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="0dp"
        android:paddingTop="16dp"
        android:paddingRight="0dp"
        android:paddingBottom="16dp">

<<<<<<< HEAD
    <TextView
        android:id="@+id/loginId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/loginId"></TextView>

    <EditText
        android:id="@+id/editText_loginId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="16dp"
        android:ems="20"
        android:hint="@string/input_loginId"
        android:inputType="textMultiLine|textNoSuggestions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
=======
        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="5dp"
            android:text="@string/email"></TextView>

        <EditText
            android:id="@+id/main_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="16dp"
            android:ems="20"
            android:hint="@string/input_email"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
>>>>>>> SignInUpWithoutGoogle

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
<<<<<<< HEAD
=======
        android:layout_marginTop="30dp"
>>>>>>> SignInUpWithoutGoogle
        android:layout_marginBottom="5dp"
        android:text="@string/password"></TextView>

    <EditText
<<<<<<< HEAD
        android:id="@+id/editText_password"
=======
        android:id="@+id/main_pwd"
>>>>>>> SignInUpWithoutGoogle
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="16dp"
        android:ems="20"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="62dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
<<<<<<< HEAD
=======
            android:layout_marginTop="30dp"
>>>>>>> SignInUpWithoutGoogle
            android:layout_gravity="center"
            android:text="@string/confirm" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>